--- a/checkin_input_phone.html
+++ b/checkin_input_phone.html
@@ -16,6 +16,7 @@
     <meta property="og:url" content="">
     <meta property="og:description" content="">
     <meta property="og:image" content="">
+    <meta name="format-detection" content="telephone=no">
 
     <link rel="icon" href="./assets/images/favicon.png">
     <link rel="apple-touch-icon" href="./assets/images/favicon.png">
