--- a/notification.html
+++ b/notification.html
@@ -60,7 +60,7 @@
     <div class="section-body position-absolute top-0 start-0 w-100 h-100 overflow-hidden">
         <div class="container h-100">
             <div class="page-notification hstack justify-content-start flex-column position-relative pb-1 h-100 overflow-hidden">
-                <div class="page-notification__body d-flex flex-column gap-2 w-100 scrollbar-hidden">
+                <div class="page-notification__body d-flex flex-column gap-2 w-100 overflow-y scrollbar-hidden">
                     <div class="notification-item fw-500 bg-white d-flex align-items-start  justify-content-between gap-1">
                         <div class="d-flex align-items-center gap-md-3 gap-2">
                             <div class="notification-item__image hstack justify-content-center flex-shrink-0">
