--- a/survey.html
+++ b/survey.html
@@ -54,18 +54,17 @@
     <div class="section-body position-absolute top-0 start-0 w-100 h-100 overflow-hidden">
         <div class="container h-100">
             <div class="page-survey h-100">
-                <div class="page-survey__header d-flex align-items-center gap-2 w-100">
-                    <div class="form-search position-relative overflow-hidden w-100">
-                        <div class="form-search__icon position-absolute top-0 start-0 h-100 d-flex align-items-center justify-content-center">
+                <div class="form-search__wrap d-flex align-items-center flex-column gap-2 w-100">
+                    <div class="form-search__item form-search position-relative overflow-hidden w-100">
+                        <div class="icon">
                             <svg width="34" height="34" viewBox="0 0 34 34" fill="none"
                                  xmlns="http://www.w3.org/2000/svg">
                                 <path d="M24.7875 24.7353L32 32M28.6667 15.3333C28.6667 22.6972 22.6972 28.6667 15.3333 28.6667C7.96953 28.6667 2 22.6972 2 15.3333C2 7.96953 7.96953 2 15.3333 2C22.6972 2 28.6667 7.96953 28.6667 15.3333Z"
                                       stroke="#B0B2BB" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                         </div>
-                        <input type="text" class="form-control bg-white" placeholder="Survey name">
+                        <input type="text" class="form-control bg-white" placeholder="Search name">
                     </div>
-
                 </div>
                 <div class="page-survey__body bg-white w-100 mt-3 hstack justify-content-between flex-column gap-2 align-items-end">
                     <div class="page-survey__wrap mb-auto w-100 d-flex flex-column gap-3 scrollbar-hidden">
