--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                                 <img src="assets/images/gift.png" class="w-100 h-100 object-fit-contain" width="161"
                                      height="161" alt="">
                             </div>
-                            <span>
+                            <span class="ms-1">
                                 <svg width="32" height="12" viewBox="0 0 32 12" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
 <path d="M1 5.25C0.585786 5.25 0.25 5.58579 0.25 6C0.25 6.41421 0.585786 6.75 1 6.75L1 5.25ZM31.5303 6.53033C31.8232 6.23744 31.8232 5.76257 31.5303 5.46967L26.7574 0.696701C26.4645 0.403808 25.9896 0.403808 25.6967 0.696701C25.4038 0.989595 25.4038 1.46447 25.6967 1.75736L29.9393 6L25.6967 10.2426C25.4038 10.5355 25.4038 11.0104 25.6967 11.3033C25.9896 11.5962 26.4645 11.5962 26.7574 11.3033L31.5303 6.53033ZM1 6.75L31 6.75L31 5.25L1 5.25L1 6.75Z"
