--- a/index.html
+++ b/index.html
@@ -203,10 +203,13 @@
                         </div>
                     </div>
                     <div class="page-home__footer d-flex align-items-center justify-content-between gap-3">
-                        <div class="title text-white fw-500">
+                       <div class="decor">
+                           <img src="assets/images/footer-checkin.png" class="w-100 h-100 object-fit-contain" width="318" height="183" alt="">
+                       </div>
+                        <div class="title text-white fw-500 position-relative zi-2">
                             Upgrade Now
                         </div>
-                        <div class="d-flex align-items-center">
+                        <div class="d-flex align-items-center position-relative zi-2">
                             <div class="image">
                                 <img src="assets/images/gift.png" class="w-100 h-100 object-fit-contain" width="161"
                                      height="161" alt="">
